--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <title>YVKI - About Me</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!--twitter card validation-->
 <meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="">
+<meta name="twitter:creator" content="">
+<meta name="twitter:title" content="VICKI YAP">
+<meta name="twitter:description" content="View the E Portfolio here.">
 <meta name="twitter:image" content="https://ibb.co/1MHg24j">
 <!--icon & stylesheet-->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
