Image URL Correction

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="twitter:creator" content="">
 <meta name="twitter:title" content="VICKI YAP">
 <meta name="twitter:description" content="View the E Portfolio here.">
-<meta name="twitter:image" content="https://ibb.co/1MHg24j">
+<meta name="twitter:image" content="https://i.ibb.co/5kq0cJw/socialpreview.jpg">
 <!--icon & stylesheet-->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
