Update for FB and LinkedIn card validation

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <title>YVKI - About Me</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- facebook and linkedin card validation-->
+<meta property="og:title" content="VICKI YAP">
+<meta property="og:description" content="View the E Portfolio here.">
+<meta property="og:image" content="https://i.ibb.co/5kq0cJw/socialpreview.jpg">
 <!--twitter card validation-->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="">
